update playwright version

--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "copy-paste-e2e",
   "version": "1.0.0",
   "engines": {
-    "node": "=16",
-    "npm": "~8"
+    "node": "20",
+    "npm": "10"
   },
   "description": "Curato e2e tests",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.29.0",
+    "@playwright/test": "1.44.0",
     "prettier": "^2.7.1"
   },
   "scripts": {
     "test": "NODE_ENV=Control npx playwright test",
     "test:mac": "NODE_ENV=Meta npx playwright test",
     "prettify": "prettier --write .",
-    "docker:run": "docker run -v $(pwd):/e2e --ipc=host --user root -it --rm mcr.microsoft.com/playwright:v1.29.0-focal /bin/bash"
+    "docker:run": "docker run -v $(pwd):/e2e --ipc=host --user root -it --rm mcr.microsoft.com/playwright:v1.44.0-jammy /bin/bash"
   }
 }
